--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Неопознанный Енот</h1>
-        <p>Junior верстальщик</p>
+        <h1 class="heading">Молев Константин Алексеевичь</h1>
+        <p>Юный Падаван</p>
       </div>
     </section>
 
@@ -27,13 +27,22 @@
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
           <figure class="user-image">
-            <img src="files/user.jpg" width="928" height="536" alt="Фотография какой-то бабы">
+            <img src="files/foto2.jpg" width="928" alt="Мама я в телевизоре!!!">
           </figure>
         <h3>Пара слов о себе</h3>
         <p>Текст с парой слов о себе.</p>
         <h3>Чем могу быть полезен</h3>
         <p>Текст о том, чем могу быть полезен.</p>
       </div>
+          <div class="skills">
+            <h3>Мои навыки</h3>
+              <dl class="skills-list">
+                <dt class="skill-html">HTML</dt>
+                <dd class="level"><div style="width: 60%">60%</div></dd>
+                <dt class="skill-css">CSS</dt>
+                <dd class="level"><div style="width: 40%">40%</div></dd>
+              </dl>
+          </div>
     </section>
 
     <section class="portfolio">
